--- a/pics/src/components/ImageList.css
+++ b/pics/src/components/ImageList.css
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   grid-gap: 0 10px;
-  /* grid-auto-rows: 11px; */
+  grid-auto-rows: auto;
 }
 
 .image-list img {
