--- a/Colt Steele_React/pokedex/src/components/Pokecard.css
+++ b/Colt Steele_React/pokedex/src/components/Pokecard.css
@@ -1,6 +1,8 @@
+body {
+  font-family: monospace;
+}
 .Pokecard {
   width: calc(100% / 7);
-  max-width: 220px;
   min-width: 200px;
   margin: 1px;
   padding: 3px;
@@ -80,4 +82,27 @@
 }
 .Pokecard-types.dark {
   background-color: rgb(66, 53, 3);
+}
+.Pokecard-stat {
+  width: 92%;
+  margin: 3px;
+  display: flex;
+  flex-flow: column;
+}
+.Pokkecard-stat-each {
+  padding-bottom: 5px;
+}
+.Pokecard-stat-title {
+  margin: 0;
+}
+.Pokecard-stat-bar {
+  height: 12px;
+  background-color: antiquewhite;
+  display: inline-block;
+}
+.Pokecard-stat-val {
+  padding-left: 5px;
+}
+.Pokecard-BP {
+  margin: 0;
 }
